// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsSummary should match snapshot when all data is loaded successfully 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-3buk32-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-container-14 css-3buk32-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container makeStyles-header-13 css-1kca4ek-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item css-19l8j7t-MuiGrid-root"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 css-1ybxgbh-MuiTypography-root"
            >
              Activity Summary
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root css-186c2wj-MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1f69azb-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root css-12aw9rk"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-12aw9rk"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-root-19 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-171eb6r-MuiPaper-root-MuiAccordion-root"
      >
        <div
          aria-expanded="false"
          class="MuiButtonBase-root makeStyles-summaryWrapper-20 MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
          role="button"
          tabindex="0"
        >
          <div
            class="makeStyles-summaryContent-21 MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-summary-22 css-tqmfip-MuiTypography-root"
            >
              Open Positions
            </p>
          </div>
          <div
            class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-xet6u8-MuiSvgIcon-root"
              data-testid="KeyboardArrowDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiAccordion-region"
                role="region"
              >
                <div
                  class="makeStyles-detailsWrapper-23 MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                >
                  <div
                    class="MuiTableContainer-root css-rorn0c-MuiTableContainer-root"
                  >
                    <table
                      class="MuiTable-root css-me9vuo-MuiTable-root"
                    >
                      <thead
                        class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head css-17ivmep-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-headColumn-24 css-hr8dup-MuiTableCell-root"
                            scope="col"
                          >
                            Symbol
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-headColumn-24 css-hr8dup-MuiTableCell-root"
                            scope="col"
                          >
                            Open
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-headColumn-24 css-19du5ju-MuiTableCell-root"
                            scope="col"
                          >
                            Quantity
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-headColumn-24 css-19du5ju-MuiTableCell-root"
                            scope="col"
                          >
                            Cost price
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-headColumn-24 css-19du5ju-MuiTableCell-root"
                            scope="col"
                          >
                            Cost value
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-headColumn-24 css-19du5ju-MuiTableCell-root"
                            scope="col"
                          >
                            Last Trade Price
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-headColumn-24 css-19du5ju-MuiTableCell-root"
                            scope="col"
                          >
                            Current Value
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-headColumn-24 css-19du5ju-MuiTableCell-root"
                            scope="col"
                          >
                            Unrealized P/L
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root makeStyles-row-29 makeStyles-row-34 css-17ivmep-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium makeStyles-column-26 css-19zhwm2-MuiTableCell-root"
                            scope="row"
                          >
                            Tokens
                          </th>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                        </tr>
                        <tr
                          class="MuiTableRow-root makeStyles-row-29 makeStyles-row-36 css-17ivmep-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium makeStyles-column-26 css-19zhwm2-MuiTableCell-root"
                            scope="row"
                          >
                            RHTC/SGD
                          </th>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            2021-11-01, 06:15 AM
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            3
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            2,000.00
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            6,000.00
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            2,000.00
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            6,000.00
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            0.00
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root makeStyles-row-29 makeStyles-row-38 css-17ivmep-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium makeStyles-column-26 css-19zhwm2-MuiTableCell-root"
                            scope="row"
                          >
                            Total
                          </th>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            5,033.00
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            146,000.00
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-26 css-1kshyuf-MuiTableCell-root"
                          >
                            -79,835.00
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-root-19 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-171eb6r-MuiPaper-root-MuiAccordion-root"
      >
        <div
          aria-expanded="false"
          class="MuiButtonBase-root makeStyles-summaryWrapper-20 MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
          role="button"
          tabindex="0"
        >
          <div
            class="makeStyles-summaryContent-21 MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-summary-22 css-tqmfip-MuiTypography-root"
            >
              Cash Report
            </p>
          </div>
          <div
            class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-xet6u8-MuiSvgIcon-root"
              data-testid="KeyboardArrowDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiAccordion-region"
                role="region"
              >
                <div
                  class="makeStyles-detailsWrapper-23 MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                >
                  <div
                    class="MuiTableContainer-root css-rorn0c-MuiTableContainer-root"
                  >
                    <table
                      class="MuiTable-root css-me9vuo-MuiTable-root"
                    >
                      <tbody
                        class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root makeStyles-row-29 makeStyles-row-40 css-17ivmep-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-39 css-19zhwm2-MuiTableCell-root"
                            scope="row"
                          >
                            USD
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-39 css-1kshyuf-MuiTableCell-root"
                            scope="row"
                          >
                            Total
                          </th>
                        </tr>
                        <tr
                          class="MuiTableRow-root makeStyles-row-29 makeStyles-row-42 css-17ivmep-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-41 css-19zhwm2-MuiTableCell-root"
                            scope="row"
                          >
                            Starting cash
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-41 css-1kshyuf-MuiTableCell-root"
                            scope="row"
                          >
                            0.00
                          </th>
                        </tr>
                        <tr
                          class="MuiTableRow-root makeStyles-row-29 makeStyles-row-44 css-17ivmep-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-43 css-19zhwm2-MuiTableCell-root"
                            scope="row"
                          >
                            Other Fees
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-43 css-1kshyuf-MuiTableCell-root"
                            scope="row"
                          >
                            0.00
                          </th>
                        </tr>
                        <tr
                          class="MuiTableRow-root makeStyles-row-29 makeStyles-row-46 css-17ivmep-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-45 css-19zhwm2-MuiTableCell-root"
                            scope="row"
                          >
                            Withdrawals
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-45 css-1kshyuf-MuiTableCell-root"
                            scope="row"
                          >
                            0.00
                          </th>
                        </tr>
                        <tr
                          class="MuiTableRow-root makeStyles-row-29 makeStyles-row-48 css-17ivmep-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-47 css-19zhwm2-MuiTableCell-root"
                            scope="row"
                          >
                            Ending Cash
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-cashColumn-25 makeStyles-cashColumn-47 css-1kshyuf-MuiTableCell-root"
                            scope="row"
                          >
                            0.00
                          </th>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountsSummary should match snapshot when data is loaded successfully and fakeCashReports is empty array 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-3buk32-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-container-63 css-3buk32-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container makeStyles-header-62 css-1kca4ek-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item css-19l8j7t-MuiGrid-root"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 css-1ybxgbh-MuiTypography-root"
            >
              Activity Summary
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root css-186c2wj-MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1f69azb-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root css-12aw9rk"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-12aw9rk"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-root-68 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-171eb6r-MuiPaper-root-MuiAccordion-root"
      >
        <div
          aria-expanded="false"
          class="MuiButtonBase-root makeStyles-summaryWrapper-69 MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
          role="button"
          tabindex="0"
        >
          <div
            class="makeStyles-summaryContent-70 MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-summary-71 css-tqmfip-MuiTypography-root"
            >
              Cash Report
            </p>
          </div>
          <div
            class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-xet6u8-MuiSvgIcon-root"
              data-testid="KeyboardArrowDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiAccordion-region"
                role="region"
              >
                <div
                  class="makeStyles-detailsWrapper-72 MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                >
                  <div
                    class="MuiTableContainer-root css-rorn0c-MuiTableContainer-root"
                  >
                    <table
                      class="MuiTable-root css-me9vuo-MuiTable-root"
                    >
                      <tbody
                        class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                      />
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountsSummary should match snapshot when data is loaded successfully and openPositions is empty array 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-3buk32-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-container-52 css-3buk32-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container makeStyles-header-51 css-1kca4ek-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item css-19l8j7t-MuiGrid-root"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 css-1ybxgbh-MuiTypography-root"
            >
              Activity Summary
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root css-186c2wj-MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1f69azb-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root css-12aw9rk"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-12aw9rk"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-wrapper-57 css-30jy6e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1kgakwq"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-12aw9rk"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 makeStyles-subtitle-58 css-3a17l8-MuiTypography-root"
          >
            This page is empty.
          </p>
          <div
            class="MuiBox-root css-7ieh0i"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 makeStyles-content-59 css-3a17l8-MuiTypography-root"
          >
            There are no records to display for the selected report.
          </p>
          <div
            class="MuiBox-root css-12aw9rk"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountsSummary should match snapshot when data is undefined 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-3buk32-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-container-3 css-3buk32-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container makeStyles-header-2 css-1kca4ek-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item css-19l8j7t-MuiGrid-root"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 css-1ybxgbh-MuiTypography-root"
            >
              Activity Summary
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root css-186c2wj-MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1f69azb-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root css-12aw9rk"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-wrapper-8 css-1uqyjmb-MuiGrid-root"
      style="opacity: 0.75;"
    >
      <div
        class="MuiBox-root css-1jpm9pd"
      />
      <div
        class="MuiBox-root css-12aw9rk"
      />
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1hvks1n-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-12aw9rk"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-wrapper-9 css-30jy6e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1kgakwq"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-7kz4db-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-12aw9rk"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 makeStyles-subtitle-10 css-3a17l8-MuiTypography-root"
          >
            This page is empty.
          </p>
          <div
            class="MuiBox-root css-7ieh0i"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 makeStyles-content-11 css-3a17l8-MuiTypography-root"
          >
            There are no records to display for the selected report.
          </p>
          <div
            class="MuiBox-root css-12aw9rk"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
